--- a/css/index.css
+++ b/css/index.css
@@ -127,3 +127,30 @@
           margin-left: 30em;
         }
       }
+
+      .textarea {
+        width: 100%;
+        height: 4em;
+        padding: 2px 2px;
+        box-sizing: border-box;
+        border: 2px solid #ccc;
+        border-radius: 4px;
+        display: inline-block;
+        background-color:#ffeee2;
+        font-size: 16px;
+        resize: none;
+      }
+
+      .button {
+        background-color: #9f7e69;
+        border-radius: 1em;
+        border: none;
+        color: white;
+        padding: 15px 32px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
+        margin: 4px 2px;
+        cursor: pointer;
+      }
