--- a/css/index.css
+++ b/css/index.css
@@ -11,7 +11,7 @@
     --col-action-fg: #ffffff;
     --col-error: tomato;
     --col-error-fg: #000000;
-    --font-body: serif;
+    --font-body: roboto;
     --font-heading: sans-serif;
     --animations: 0.3s;
   }
@@ -83,6 +83,26 @@
         padding: 0 1em;
         margin-top: 2.1875em;
       }
+.message { 
+   padding: 1em;
+   border-radius: 1em;
+   margin: 1em;
+  }
+.message h1 {
+    font-size: 1em;
+    font-weight: 700;
+}
+
+.from-me {
+    background-color: #FFF6CB;
+    margin-left: 30%;
+
+}
+
+.from-them {
+    background-color: #F6F7EC;
+    margin-right: 30%;
+}
 
       @media screen and (min-width: 40em) {
         .others {
